# newtd

./: .Dockerfile  .gitignore  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  reqs.txt  ruff.toml  start.sh  tailwind.config.js  webpack.config.js
dbeaver_scripts/: Personnel.sql  remove_people.do.sql
src/: db.sqlite3
src/config/: settings.py  urls.py
src/crm/: admin.py  business.py  forms.py  models.py  report_views.py  serializer_validators.py  serializers.py  urls.py  utils.py  validators.py  views.py
src/crm/SQLs/: debtor_client.sql  order_payment.sql
src/crm/migrations/: 0001_initial.py  0002_alter_people_managers_alter_order_discount_and_more.py  0002_alter_people_personnel_role.py  0002_people_father_name_people_minimum_salary_and_more.py  0003_people_created_at_people_updated_at_and_more.py  0003_remove_order_service_orderservices_order_service.py  0003_remove_people_roles_remove_peopletype_catalog_and_more.py  0004_rename_service_order_services_remove_order_cost.py  0004_specification_unique_specification.py  0005_alter_address_city.py  0005_alter_contract_referral_other_and_more.py  0006_contract_end_hour_contract_start_hour.py  0007_orderpayment.py  0008_call_note_alter_people_people_type.py  0009_alter_peopledetailedinfo_phone_number.py  0010_blacklist.py  0011_remove_peopledetailedinfo_address_and_more.py  0012_catalog_alter_people_specifications_and_more.py  0013_alter_catalog_code_alter_catalog_rate.py
src/crm/static/css/: custom.css  input.css  jquery.toast.min.css  output.css  (+1 more)
src/crm/templatetags/: crm_extras.py
(+88 files in other folders)
