[tool.poetry]
name = "new tehran darman"
version = "0.1.0"
description = "Home Care Nursing Services CRM"
authors = ["daway0 <rezaee.erfan.2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
django-crispy-forms = "^2.1"
jdatetime = "^4.1.1"
psycopg2-binary = "^2.9.9"
ruff = "^0.4.5"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
